--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/bg2.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -330,9 +330,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Our Clients</h3>
-                <h1 class="display-2">EduFox has been honored to
-                partner up with these clients</h1>
+                <h3 class="subhead">Our Courses</h3>
+                <h1 class="display-2">EduFox provides you with these courses</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -340,14 +339,14 @@
             <div class="col-full">
                 <div class="clients">
                     
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/apple.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/atom.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/blackberry.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/dropbox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/envato.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/firefox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/joomla.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/magento.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/ai.jpg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/ml.jpeg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/bigdata.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/iot.jpg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/energy.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/Digital-Marketing.jpg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/block.jpg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/auto.jpg" /></a>
                      
                 </div> <!-- end clients -->
             </div> <!-- end col-full -->
